--- a/Core/Views/Shared/_Layout.cshtml
+++ b/Core/Views/Shared/_Layout.cshtml
@@ -2,14 +2,16 @@
 <html>
 <head>
     <title>@ViewBag.Title</title>
+    @Styles.Render("~/Content/css")
+
 </head>
 <body>
     <div id="header">
         <h1><a href="/">ASP.NET MVC</a></h1>
         <ul id="navlist">
             <li class="first"><a href="@Url.Content("~")" id="current">Home</a></li>
-            <li><a href="@Url.Content("~/Store/")">Store</a></li>
-        </ul>        
+            <li><a href="@Url.Content("~/MvcDemos/")">MvcDemos</a></li>
+        </ul>
     </div>
     <div id="main">
         @RenderBody()
@@ -20,3 +22,6 @@
     </div>
 </body>
 </html>
+
+@Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/jqueryui")
