--- a/src/MvcDemos/Views/Store/Index.cshtml
+++ b/src/MvcDemos/Views/Store/Index.cshtml
@@ -30,9 +30,9 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.GenreId }, new { @class="editLink", data_id=@item.GenreId} ) |
-            @Html.ActionLink("Details", "Details", new { id = item.GenreId }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.GenreId })
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class="editLink", data_id=@item.Id} ) |
+@*            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.GenreId })*@
             </td>
         </tr>
     }
