--- a/src/MvcDemos/Views/AjaxForm/_Create.cshtml
+++ b/src/MvcDemos/Views/AjaxForm/_Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MvcDemos.Models.Account
+﻿@model Core.Entities.Account
 
 @*<script src="~/Scripts/jquery-1.8.2.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
