--- a/src/MvcDemos/Views/AjaxForm/_Create.cshtml
+++ b/src/MvcDemos/Views/AjaxForm/_Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core.Entities.Account
+﻿@model MvcDemos.ViewModels.GenreEditModel
 
 @*<script src="~/Scripts/jquery-1.8.2.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
@@ -6,30 +6,30 @@
 
 <div id="ParentDiv">
 
-@using (Ajax.BeginForm("Index", "AjaxForm", new AjaxOptions { UpdateTargetId = "ParentDiv", HttpMethod = "POST" }))
-{
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true)
+    @using (Ajax.BeginForm("Index", "AjaxForm", new AjaxOptions {UpdateTargetId = "ParentDiv", HttpMethod = "POST"}))
+    {
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary(true)
 
-    <fieldset>
-        <legend>Account</legend>
+        <fieldset>
+            <legend>Genre</legend>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Username)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Username)
-            @Html.ValidationMessageFor(model => model.Username)
-        </div>
+            <div class="editor-label">
+                @Html.LabelFor(model => model.Name)
+            </div>
+            <div class="editor-field">
+                @Html.EditorFor(model => model.Description)
+                @Html.ValidationMessageFor(model => model.Description)
+            </div>
 
-        <p>
-            <input type="submit" value="Create" />
-        </p>
-    </fieldset>
-}
+            <p>
+                <input type="submit" value="Create" />
+            </p>
+        </fieldset>
+    }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+    <div>
+        @Html.ActionLink("Back to List", "Index")
+    </div>
 
 </div>
