--- a/Core/Areas/MvcDemos/Views/Shared/_Layout.cshtml
+++ b/Core/Areas/MvcDemos/Views/Shared/_Layout.cshtml
@@ -2,11 +2,6 @@
 <html>
 <head>
     <title>@ViewBag.Title</title>
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
-  
-    <script src="@Url.Content("~/Scripts/jquery-1.9.1.js")" type="text/javascript"> </script>
-    <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.min.js")" type="text/javascript"> </script>
-    <script src="~/Scripts/jquery-ui-1.10.3.js"></script>
 </head>
 <body>
     <div id="header">
@@ -23,5 +18,10 @@
     <div id="footer">
         built with <a href="http://asp.net/mvc">ASP.NET MVC 3</a>
     </div>
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryui")
+    @Scripts.Render("~/bundles/jqueryval")
+    
+
 </body>
 </html>
