--- a/src/MvcDemos/Views/Shared/_Layout.cshtml
+++ b/src/MvcDemos/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <script src="@Url.Content("~/Scripts/jquery-1.9.1.js")" type="text/javascript"> </script>
     <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.min.js")" type="text/javascript"> </script>
     <script src="~/Scripts/jquery-ui-1.10.3.js"></script>
+    <script src="~/Scripts/jquery.jqGrid.js"></script>
 </head>
 <body>
     <div id="header">
