--- a/src/MvcDemos/Views/Shared/_Layout.cshtml
+++ b/src/MvcDemos/Views/Shared/_Layout.cshtml
@@ -1,13 +1,14 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>@ViewBag.Title</title>
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
-  
-    <script src="@Url.Content("~/Scripts/jquery-1.9.1.js")" type="text/javascript"> </script>
-    <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.min.js")" type="text/javascript"> </script>
-    <script src="~/Scripts/jquery-ui-1.10.3.js"></script>
-    <script src="~/Scripts/jquery.jqGrid.js"></script>
+    <meta charset="utf-8" />
+    <title>@ViewBag.Title - My ASP.NET MVC Application</title>
+    <meta name="viewport" content="width=device-width" />
+    @Styles.Render(
+            "~/Content/css",
+            "~/Content/themes/base/css")
+
+    @*@Scripts.Render("~/bundles/modernizr")*@
 </head>
 <body>
     <div id="header">
@@ -25,5 +26,13 @@
     <div id="footer">
         built with <a href="http://asp.net/mvc">ASP.NET MVC 3</a>
     </div>
+
+    @Scripts.Render(
+    "~/bundles/jquery",
+    "~/bundles/jqueryui",
+    "~/bundles/jqueryval",
+    "~/bundles/jqueryplugins")
+
+    @RenderSection("scripts", required: false)
 </body>
 </html>
