a custom validation implemetend

--- a/src/MvcDemos/Views/Genre/Create.cshtml
+++ b/src/MvcDemos/Views/Genre/Create.cshtml
@@ -1,14 +1,16 @@
 ﻿@model MvcDemos.ViewModels.GenreEditModel
 
-@{
-    ViewBag.Title = "Create";
+@section scripts{
+    @Scripts.Render("~/js/validatorAdapters/requiredIfTrueValidatorAdapter.js")
 }
 
-<h2>Create</h2>
+<h2>Create Genre</h2>
 @using (Html.BeginForm())
 {
+    @Html.ValidationSummary()
+
     @Html.EditorForModel()
-    <button name="submit" value="submit" >submit</button>  
-                <input type="submit" value="Create" />
-    
+
+    <button name="submit" value="submit">submit</button>
+    <input type="submit" value="Create" />
 }
