--- a/src/MvcDemos/Views/Shared/_Layout.cshtml
+++ b/src/MvcDemos/Views/Shared/_Layout.cshtml
@@ -3,13 +3,15 @@
 <head>
     <meta charset="utf-8" />
     <title>@ViewBag.Title - My ASP.NET MVC Application</title>
+    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width" />
 
+    @Styles.Render("~/Content/bootstrap/css", "~/Content/css")
     @Styles.Render(
         "~/Content/themes/redmond/css",
         "~/Content/Themes/jqgrid")
 
-    @RenderSection("StyleContent", required: false) 
+    @RenderSection("StyleContent", required: false)
 
 
     @*@Scripts.Render("~/bundles/modernizr")*@
