* implemented securing parameter tempering while editing

--- a/src/MvcDemos/Views/Genre/Create.cshtml
+++ b/src/MvcDemos/Views/Genre/Create.cshtml
@@ -8,7 +8,7 @@
 @using (Html.BeginForm())
 {
     @Html.Partial("ValidationSummary", ViewData.ModelState)
-    
+    @Html.AntiForgeryToken()   
 
     @Html.EditorForModel()
 
