--- a/src/MvcDemos/Views/Genre/Index.cshtml
+++ b/src/MvcDemos/Views/Genre/Index.cshtml
@@ -1,10 +1,4 @@
-﻿@{
-    ViewBag.Title = "Index";
-}
-
-<h2>Index</h2>
+﻿<h2>Index</h2>
 <p>
     @Html.ActionLink("Create New", "Create");
-    
-
 </p>
