--- a/src/MvcDemos/Views/Shared/_Layout.cshtml
+++ b/src/MvcDemos/Views/Shared/_Layout.cshtml
@@ -18,28 +18,33 @@
     @*@Scripts.Render("~/bundles/modernizr")*@
 </head>
 <body>
-    <div id="header">
-        <h1><a href="/">ASP.NET MVC</a></h1>
-        @* <ul id="navlist">
-            <li class="first"><a href="@Url.Content("~")" id="current">Home</a></li>
-            <li><a href="@Url.Content("~/MvcDemos/")">MvcDemos</a></li>
-        </ul>*@
-        @Html.MvcSiteMap().Menu()
-    </div>
-    <div id="main">
-        @RenderBody()
-    </div>
-
-    <div id="footer">
-        <span>Version @Html.CurrentVersion() </span>
-        built with <a href="http://asp.net/mvc">ASP.NET MVC 4</a>
+    <div class="container">
+        <div class="row">
+            <div class="span12">
+                <nav>
+                    @Html.MvcSiteMap().Menu("BootstrapMenuHelperModel")
+                </nav>
+            </div>
+        </div>
+        <div class="row">
+            <div class="span12">
+                @RenderBody()
+            </div>
+            <hr />
+            <footer>
+                <span>Version @Html.CurrentVersion() </span>
+                <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            </footer>
+        </div>
     </div>
 
     @Scripts.Render(
-    "~/bundles/jquery",
-    "~/bundles/jqueryui",
-    "~/bundles/jqueryval",
-    "~/bundles/jqueryplugins")
+        "~/bundles/jquery",
+        "~/bundles/jqueryui",
+        "~/bundles/jqueryval",
+        "~/bundles/jqueryplugins")
+
+    @Scripts.Render("~/bundles/bootstrap")
 
     @RenderSection("scripts", required: false)
 </body>
