--- a/src/MvcDemos/Views/Shared/_Layout.cshtml
+++ b/src/MvcDemos/Views/Shared/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿@using My.Framework.Mvc.HtmlHelper
 <!DOCTYPE html>
-<html lang="en">
+<html lang="lang="@MvcDemos.Helpers.CultureHelper.GetCurrentNeutralCulture()">
 <head>
     <meta charset="utf-8" />
     <title>@ViewBag.Title - My ASP.NET MVC Application</title>
