* validation exception return using fluentValidation from service layer correctly handled in controller and dispalyed in view.

--- a/src/MvcDemos/Views/Genre/Index.cshtml
+++ b/src/MvcDemos/Views/Genre/Index.cshtml
@@ -1,4 +1,12 @@
 ﻿<h2>Index</h2>
 <p>
-    @Html.ActionLink("Create New", "Create");
+    @Html.ActionLink("Create New", "Create")
 </p>
+
+
+@using (Html.BeginForm("GetGenreById", "Genre"))
+{
+    @Html.Partial("ValidationSummary", ViewData.ModelState)
+    @Html.TextBox("id", 1)
+    <button> Get genre - invokes fluent validation at service layer</button>
+}
