* webapitest client added. * WIP : validation of webapi using fluentvalidation.

--- a/src/MvcDemos/Views/Shared/_Layout.cshtml
+++ b/src/MvcDemos/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿@using My.Framework.Mvc.HtmlHelper
+﻿@using My.Framework.Web.Mvc.HtmlHelper
 <!DOCTYPE html>
 <html lang="lang="@MvcDemos.Helpers.CultureHelper.GetCurrentNeutralCulture()">
 <head>
