* checkModelForNull action filter added

--- a/src/MvcDemos/Content/Site.css
+++ b/src/MvcDemos/Content/Site.css
@@ -1,7 +1,7 @@
 ﻿.validation-summary-errors {
-    /*color: #e80c4d;
+    color: #e80c4d;
     font-weight: bold;
-    font-size: 1.1em;*/
+    font-size: 1.1em;
 }
 
 .validation-summary-valid {
