--- a/src/MvcDemos/Features/Validation/Views/Index.cshtml
+++ b/src/MvcDemos/Features/Validation/Views/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcDemos.Validation.Models.Reservation
 @{
     ViewBag.Title = "ResIt!";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    //Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <header>
