* configure webapi using GlobalConfiguration instead of WebApiConfig * handle Api exception, inspired by elmah GlobalErrorHandling.WebApi

--- a/src/MvcDemos/Views/Error/500.cshtml
+++ b/src/MvcDemos/Views/Error/500.cshtml
@@ -31,7 +31,7 @@
     
     <hr/>
     
-    <h2>Sowwy about the unexpected error. <br/>To try and make up for it, here's an awesome song to make you smile and groove :)</h2>
+    <h2>Sorry about the unexpected error. <br/>To try and make up for it, here's an awesome song to make you smile and groove :)</h2>
     
     @{
         string id;
