angularj validation using ng-messages

--- a/src/MvcDemos/Features/Validation/Views/Index.cshtml
+++ b/src/MvcDemos/Features/Validation/Views/Index.cshtml
@@ -1,38 +1,10 @@
 ﻿@model MvcDemos.Validation.Models.Reservation
 @{
     ViewBag.Title = "ResIt!";
-    //Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<header>
-    <div class="content-wrapper">
-        <div class="float-left">
-            <p class="site-title">
-                <a href="~/">ResIt</a>
-            </p>
-        </div>
-    </div>
-</header>
-<div id="body">
-    <section class="featured">
-        <div class="content-wrapper">
-            <hgroup class="title">
-                <h1>Welcome To ResIt!</h1>
-                <h2>A generally useless reservation system</h2>
-            </hgroup>
-            <p>
-                ResIt allows you to create a reservation. Your reservation will not be saved to any kind of database. You will not be
-                able to edit your reservation. But you will be able to see validation messages. :-)
-            </p>
-            <p>
-                To learn more about FluentValidation Visit
-                <a href="http://fluentvalidation.codeplex.com/" title="FluentValidation">FluentValidation</a>.
-                <br />
-                <br />
-                To learn more about Me Visit <a href="http://www.brette.net" title="Brette.Net">Brette.Net Consulting</a>.
-            </p>
-        </div>
-    </section>
+<div>
+
     <section class="content-wrapper main-content clear-fix">
         <h2>Create A New Reservation</h2>
         <form id="createReservationForm">
